classDiagram

    class Owner {
        +str name
        list~Pet~ pets
        +str preferences 
        +add_pet(pet)
        +remove_pet(pet) 
    }

    class Pet {
        +str name
        +str gender
        +str breed
        list~Task~ tasks
        +add_task(Task)
        +remove_task(Task)
    }

    class Task {
        +str description
        +str priority
        +bool status
        +int duration
        +mark_complete()
        +edit_description()
    }

    class Scheduler {
        +retrieve_schedule()
        +generate_schedule()
        +explain_schedule()
    }

    Owner "1" *-- "1..*" Pet : owns
    Owner "1" --> "1" Scheduler : has
    Pet "1" --> "0..*" Task : has
    Scheduler "1" --> "0..*" Task : has